# sql-query-generator

./: .gitignore  PRD.md  README.md  app.py  requirements.txt  school.db  student.db
.github/workflows/: ci.yml
backend/: .env.example  README.md  api_demo.py  environment.yml  pyproject.toml  setup.py
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: db.py  nl2sql.py
backend/app/utils/: sql_cleaner.py
backend/scripts/: seed_db.py
backend/tests/: conftest.py  test_health.py  test_nl2sql_endpoint.py  test_run_sql.py  test_sql_cleaner.py  test_students.py
