[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2sql-backend"
version = "1.0.0"
description = "FastAPI backend for Text-to-SQL over SQLite STUDENT table"
authors = [{name = "Austin", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0.1",
  "groq>=0.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = false
